--- a/app/src/main/res/layout/activity_navhome.xml
+++ b/app/src/main/res/layout/activity_navhome.xml
@@ -90,6 +90,8 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                            android:textSize="18dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
