--- a/app/src/main/res/layout/fragment_karakia.xml
+++ b/app/src/main/res/layout/fragment_karakia.xml
@@ -53,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="21dp"/>
         </LinearLayout>
     </ScrollView>
 
