--- a/app/src/main/res/layout/activity_navhome.xml
+++ b/app/src/main/res/layout/activity_navhome.xml
@@ -101,7 +101,7 @@
                             android:id="@+id/info_link"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/Reference_1"
+                            android:text="@string/button_source"
                             app:layout_constraintTop_toBottomOf="@id/infocard_text"
                             app:layout_constraintEnd_toEndOf="parent"/>
 
